--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Java Script Intro</title>
+    <script src = "./conversion.js"></script>
 </head>
 <body>
-<script>
-    console.log("Hello World!");
-</script>
+
 </body>
 </html>
